tests/sksl/errors/ReservedNameFvec4.glsl
### Compilation failed:

error: 1: 'fvec4' is a reserved word
int fvec4;
    ^^^^^
1 error
